[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnu@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.7"
uvicorn = "^0.21.1"
python-dateutil = "^2.8.2"
ariadne = "^0.19.0"
fastapi-users = "^10.4.1"
lxml = "^4.9.2"
psycopg2 = "^2.9.5"
lazy-object-proxy = "^1.9.0"
aiosmtplib = "^2.0.1"
html2text = "^2020.1.16"
more-itertools = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
